# agentShare

./: .dockerignore  .env.example  .env.production.example  .gitignore  ANIME_REFACTOR_DESIGN.md  ANIME_REFACTOR_V2_ARCHITECTURE.md  ANIME_REFACTOR_V3_DUAL_COSMOS.md  API_INTERFACES.md  FRONTEND_FIXES.md  README.md  agent.md  docker-compose.coolify.yml  docker-compose.prod.yml  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/agent_control_plane_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/alembic/: env.py
apps/api/app/: __init__.py  auth.py  config.py  db.py  dependencies.py  errors.py  factory.py  main.py  observability.py  runtime.py  store.py
apps/api/tests/: conftest.py  test_access_token_auth.py  test_access_tokens_api.py  test_admin_accounts_api.py  test_agent_auth.py  test_agent_tokens_api.py  test_alembic_migrations.py  test_api_key_auth.py  test_app_factory.py  test_approval_policy.py  test_approvals_api.py  test_authorization_policy.py  test_bootstrap_api.py  test_capabilities_api.py  test_capability_access_policy.py  test_catalog_api.py  test_config.py  test_db.py  test_dream_followup_tasks.py  test_dream_mode_characterization.py  test_error_mapping.py  test_events_api.py  test_gateway_fail_closed.py  test_generic_http_adapter.py  test_github_adapter.py  test_health.py  test_idempotency.py  test_identifiers.py  test_intake_catalog_api.py  test_invoke_api.py  test_lease_api.py  test_management_auth.py  test_management_roles.py  test_management_session_service.py  test_mcp_server.py  (+34 more)
(+736 files in other folders)
